sas-core/main/default/objects/FCS_Booking__x/FCS_Booking__x.object-meta.xml
<CustomObject>
    <description>Represent a booking in an external system</description>
    <externalDataSource>SAS_External_Systems</externalDataSource>
    <externalName>Bookings</externalName>
    <label>Booking</label>
    <pluralLabel>Bookings</pluralLabel>
</CustomObject>