sas-core/main/default/objects/FCS_Booking__x/fields/BookingReference__c.field-meta.xml
<CustomField>
    <fullName>BookingReference__c</fullName>
    <externalDeveloperName>reference</externalDeveloperName>
    <label>Booking Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>