sas-core/main/default/objects/FCS_Booking__x/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of booking, e.g. active or planned</description>
    <externalDeveloperName>status</externalDeveloperName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>