sas-core/main/default/objects/FCS_Booking__x/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of booking, e.g. ReturnTrip or MultiCity</description>
    <externalDeveloperName>type</externalDeveloperName>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>